  Weeks, & Mark Shinwell)

- #7903, #2306: Make Thread.delay interruptible by signals again
  (Xavier Leroy, review by Jacques-Henri Jourdan and Edwin Török)

- #2248: Unix alloc_sockaddr: Fix read of uninitialized memory for an
  unbound Unix socket. Add support for receiving abstract (Linux) socket paths.
  (Tim Cuthbertson, review by Sébastien Hinderer and Jérémie Dimino)

### Compiler user-interface and warnings:

* #2276: Remove support for compiler plugins and hooks (also adds
  [Dynlink.unsafe_get_global_value])
  (Mark Shinwell, Xavier Clerc, review by Nicolás Ojeda Bär,
  Florian Angeletti, David Allsopp and Xavier Leroy)

- #2301: Hint on type error on int literal
  (Jules Aguillon, review by Nicolás Ojeda Bär , Florian Angeletti,
  Gabriel Scherer and Armaël Guéneau)

* #2314: Remove support for gprof profiling.
  (Mark Shinwell, review by Xavier Clerc and Stephen Dolan)

- #2190: fix pretty printing (using Pprintast) of "lazy ..." patterns and
  "fun (type t) -> ..." expressions.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

- #2277: Use newtype names as type variable names
  The inferred type of (fun (type t) (x : t) -> x)
  is now printed as ('t -> 't) rather than ('a -> 'a).
  (Matthew Ryan)


- #2309: New options -with-runtime and -without-runtime in ocamlopt/ocamlc
  that control the inclusion of the runtime system in the generated program.
  (Lucas Pluvinage, review by Daniel Bünzli, Damien Doligez, David Allsopp
   and Florian Angeletti)

- #3819, #8546 more explanations and tests for illegal permutation
  (Florian Angeletti, review by Gabriel Scherer)

- #8537: fix the -runtime-variant option for bytecode
  (Damien Doligez, review by David Allsopp)

- #8541: Correctly print multi-lines locations
  (Louis Roché, review by Gabriel Scherer)

- #8579: Better error message for private constructors
  of an extensible variant type
  (Guillaume Bury, review by many fine eyes)

### Code generation and optimizations:
