@@ -49,16 +49,18 @@ module CstMap =
        because it compares "0.0" and "-0.0" equal. *)
   end)
 
+module SymMap = Misc.Stdlib.String.Map
+
 type structured_constants =
   {
     strcst_shared: string CstMap.t;
-    strcst_all: (string * Clambda.ustructured_constant) list;
+    strcst_all: Clambda.ustructured_constant SymMap.t;
   }
 
 let structured_constants_empty  =
   {
     strcst_shared = CstMap.empty;
-    strcst_all = [];
+    strcst_all = SymMap.empty;
   }
 
 let structured_constants = ref structured_constants_empty
@@ -371,7 +373,7 @@ let new_structured_constant cst ~shared =
       structured_constants :=
         {
           strcst_shared = CstMap.add cst lbl strcst_shared;
-          strcst_all = (lbl, cst) :: strcst_all;
+          strcst_all = SymMap.add lbl cst strcst_all;
         };
       lbl
   else
@@ -379,7 +381,7 @@ let new_structured_constant cst ~shared =
     structured_constants :=
       {
         strcst_shared;
-        strcst_all = (lbl, cst) :: strcst_all;
+        strcst_all = SymMap.add lbl cst strcst_all;
       };
     lbl
 
@@ -389,6 +391,9 @@ let add_exported_constant s =
 let clear_structured_constants () =
   structured_constants := structured_constants_empty
 
+let structured_constant_of_symbol s =
+  SymMap.find_opt s (!structured_constants).strcst_all
+
 let structured_constants () =
   let provenance : Clambda.usymbol_provenance =
     { original_idents = [];
@@ -396,7 +401,8 @@ let structured_constants () =
         Path.Pident (Ident.create_persistent (current_unit_name ()));
     }
   in
-  List.map
+  SymMap.bindings (!structured_constants).strcst_all
+  |> List.map
     (fun (symbol, definition) ->
        {
          Clambda.symbol;
@@ -404,7 +410,6 @@ let structured_constants () =
          definition;
          provenance = Some provenance;
        })
-    (!structured_constants).strcst_all
 
 let closure_symbol fv =
   let compilation_unit = Closure_id.get_compilation_unit fv in
